fix: adjust search input field on mobiles

--- a/fancy-weather/src/sass/components/_search.scss
+++ b/fancy-weather/src/sass/components/_search.scss
@@ -27,3 +27,10 @@
     cursor: pointer;
   }
 }
+
+@media (max-width: 420px) {
+  > input,
+  > button {
+    padding: 13px 13px;
+  }
+}
